<resources>
    <string name="app_name">Weather</string>
    <string name="place">Places</string>
    <string name="map">Map</string>
    <string name="weather">Weather</string>

    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_check_weather">Check Weather</string>
    <string name="btn_add_places">Add</string>

    <string name="desc_see">See</string>
    <string name="desc_close">Close</string>

    <string name="test_places">London</string>
    <string name="title_activity_maps">Map</string>


    <string name="temp">Temp:</string>
    <string name="wt">Weather:</string>
    <string name="lat">LAT:</string>
    <string name="lon">LON:</string>


</resources>
