<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".WeatherActivity">

    <TextView
        android:id="@+id/tvNamePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/test_places"
        android:textAlignment="center"
        android:textColor="@color/colorLightGray_"
        android:textSize="36sp" />
    <ImageView
        android:id="@+id/imgWeather"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textColor="@color/colorLightGray_"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/valueTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textColor="@color/colorLightGray_" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wt"
                android:textColor="@color/colorLightGray_"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/valueWT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textColor="@color/colorLightGray_" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                android:textColor="@color/colorLightGray_"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/valueLAT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textColor="@color/colorLightGray_" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lon"
                android:textColor="@color/colorLightGray_"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/valueLon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="viewStart"
                android:textColor="@color/colorLightGray_"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>